test/sema/generic-type-init-non-existing-member.delta.output
generic-type-init-non-existing-member.delta:5:16: error: no member named 'd' in 'A<int>'
    A() { this.d = 3 }
               ^
